Support comma-separated CORS origins